webアプリ化とテスト追加
